# yieldplotlib

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_FINISH_SETUP.md  cookiecutter.json  noxfile.py  pyproject.toml  ypl_style.txt
.github/workflows/: download-gsheet.yml  draft-pdf.yaml  generate_parameters_docs.yml  publish-to-pypi.yml  release-please.yml  tests.yml
docs/: conf.py  example_conf.py  index.md
docs/plot_gallery/: gallery.md
docs/tutorials/: yieldplotlib_tutorial.ipynb
docs/tutorials/sample_data/ayo/: coronagraph1.csv  observations.csv  target_list.csv  yield_run.ayo
docs/tutorials/sample_data/exosims/: Example_EXOSIMS.json  core_mean_intensity.fits  core_thruput.fits  occ_trans.fits
docs/tutorials/sample_data/exosims/csv/: Example_EXOSIMS.json  reduce-det-funnel.csv  reduce-earth-char-count.csv  reduce-earth-char-list.csv  reduce-earth.csv  reduce-event-counts.csv  reduce-events.csv  reduce-funnel.csv  reduce-info.csv  reduce-promote-hist.csv  reduce-promote.csv  reduce-radlum.csv  reduce-star-target.csv  reduce-times.csv  reduce-visit-time.csv  reduce-visits.csv  reduce-yield-time.csv
docs/tutorials/sample_data/exosims/drm/: 10185257.pkl  114627190.pkl  115896655.pkl  119223995.pkl  128389321.pkl  131767439.pkl  150988834.pkl  166490974.pkl  167769917.pkl  183535971.pkl  210955754.pkl  21494941.pkl  223248933.pkl  229154300.pkl  237141690.pkl  237920086.pkl  24252530.pkl  260034135.pkl  268142898.pkl  285163938.pkl  291514479.pkl  297122009.pkl  303042816.pkl  319238140.pkl  334932511.pkl  34757885.pkl  348976239.pkl  355819071.pkl  357337548.pkl  36709893.pkl  397016230.pkl  400333595.pkl  40110675.pkl  40442095.pkl  424221621.pkl  440346020.pkl  452494272.pkl  463408153.pkl  467158762.pkl  46942734.pkl  (+60 more)
docs/tutorials/sample_data/exosims/spc/: 10185257.spc  114627190.spc  115896655.spc  119223995.spc  128389321.spc  131767439.spc  150988834.spc  166490974.spc  167769917.spc  183535971.spc  210955754.spc  21494941.spc  223248933.spc  229154300.spc  237141690.spc  237920086.spc  24252530.spc  260034135.spc  268142898.spc  285163938.spc  291514479.spc  297122009.spc  303042816.spc  319238140.spc  334932511.spc  34757885.spc  348976239.spc  355819071.spc  357337548.spc  36709893.spc  397016230.spc  400333595.spc  40110675.spc  40442095.spc  424221621.spc  440346020.spc  452494272.spc  463408153.spc  467158762.spc  46942734.spc  (+60 more)
docs/user/: cite.md  cite.rst  dev.md  functionality.md  installation.md  intro.md  parameters_table.md  ypl_parameters.md
interactive_plots/specs/: pygwalker_spec_1724696196964.json
mplstyles/: ypl_default.mplstyle
paper/: paper.bib  paper.md
scripts/: comparison_plotting_example.py  generate_pooch_registry.py  loader_test.py  logging_demo.py  plot_demo.py  ypl_plotting_example.py
src/: plots_for_JOSS.py
src/yieldplotlib/: __init__.py  accessibility.py  accessibility_check.py  datasets.py  generate_docs.py  generate_key_map.py  key_map.py  logger.py  pipeline.py  util.py  ypl_cli.py
src/yieldplotlib/core/: __init__.py  csv_node.py  data_node.py  directory_node.py  file_nodes.py  json_node.py  node.py  pickle_node.py  plot.py  single_inputs.py  yield_result.py
src/yieldplotlib/load/: __init__.py  ayo_directory.py  cds_directory.py  cds_loader.py  exosims_directory.py  yip_directory.py
src/yieldplotlib/load/ayo/: __init__.py  ayo_csv.py  ayo_input.py
src/yieldplotlib/load/exosims/: __init__.py  drm_file.py  drm_node.py  exosims_csv.py  exosims_drm.py  exosims_input_file.py  exosims_input_node.py  exosims_spc.py  spc_file.py  spc_node.py
src/yieldplotlib/plots/: __init__.py  comparison_plots.py  generic_plot.py  hz_completeness.py  yield_hist.py  yip_plots.py
src/yieldplotlib/style/: __init__.py  custom_colors.py  yieldplotlib.mplstyle  ypl_style.txt
tests/: conftest.py  datasets_test.py  key_map_test.py  plots_test.py  test_datasets.py  test_internal_refs_guard.py  test_key_map.py  test_plots.py
tools/: check_internal_refs.py
{{cookiecutter.project}}/: README.md  pyproject.toml
{{cookiecutter.project}}/docs/: example_conf.py
