[build-system]
requires = ['hatchling', "hatch-fancy-pypi-readme", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = {{cookiecutter.project}}
authors = [{ name = {{cookiecutter.author}}, email = "TODO" }]
description = "TODO"
dependencies = ["TODO"]
license = { file = "LICENSE" }
dynamic = ['readme', 'version']
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Astronomy",
]

[project.urls]
Homepage = "https://github.com/{{cookiecutter.username}}/{{cookiecutter.project}}"
Issues = "https://github.com/{{cookiecutter.username}}/{{cookiecutter.project}}/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/{{cookiecutter.project}}/_version.py"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[project.optional-dependencies]
docs = [
  "sphinx",
  "myst-nb",
  "sphinx-book-theme",
  "sphinx-autoapi",
  "sphinx_autodoc_typehints",
  "matplotlib",
]
test = ["nox", "pytest", "hypothesis", "pytest-cov"]

[tool.ruff.lint]
select = ["D", "E", "F", "I"]

[tool.ruff.lint.pydocstyle]
convention = "google"
